apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'  // Google Services plugin

android {

    compileOptions {
        targetCompatibility = "8"
        sourceCompatibility = "8"
    }

    compileSdkVersion 33
    //buildToolsVersion "30.0.3"

    defaultConfig {
        applicationId "com.ensias.healthcareapp"
        minSdkVersion 21
        //noinspection EditedTargetSdkVersion
        targetSdkVersion 33
        versionCode 8
        versionName "1.7"
        multiDexEnabled true
        vectorDrawables.useSupportLibrary = true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    namespace 'com.ensias.healthcareapp'

}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation "androidx.legacy:legacy-support-v4:1.0.0"
    implementation "androidx.recyclerview:recyclerview:1.0.0"
    implementation "androidx.viewpager:viewpager:1.0.0"
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'com.android.volley:volley:1.2.1'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
    implementation 'com.google.firebase:firebase-auth:19.3.0'
    implementation 'com.google.firebase:firebase-database:19.2.1'
    implementation 'com.google.android.gms:play-services-auth:18.0.0'
    implementation 'com.google.android.material:material:1.1.0'
    implementation 'com.google.firebase:firebase-firestore:21.4.2'
    implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
    implementation 'androidx.multidex:multidex:2.0.0'
    implementation 'androidx.appcompat:appcompat:1.0.0'
    implementation 'com.shuhart.stepview:stepview:1.5.1'
    implementation 'com.jaredrummler:material-spinner:1.3.1'
    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
    implementation 'com.jakewharton:butterknife:10.0.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
    implementation 'com.github.d-max:spots-dialog:1.1@aar'
    implementation 'io.paperdb:paperdb:2.7.1'
    implementation 'com.google.code.gson:gson:2.8.5'
    implementation platform('com.google.firebase:firebase-bom:31.0.0')
    implementation 'com.squareup.picasso:picasso:2.5.2'
    implementation 'com.android.support:multidex:2.0.1'
    implementation 'com.firebaseui:firebase-ui-firestore:4.1.0'
    implementation 'com.google.firebase:firebase-storage:19.1.1'

    tasks.withType(JavaCompile).configureEach{options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']}
}
//apply plugin: 'com.google.firebase.crashlytics'